--- a/public/css/app-style.css
+++ b/public/css/app-style.css
@@ -94,14 +94,6 @@ body {
     margin: 0;
 }
 
-header {
-    padding: 2rem 2rem 0 2rem;
-}
-
-nav {
-    padding: 2rem;
-}
-
 h1,
 h2,
 h3,
@@ -133,19 +125,80 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-
 }
 
-main {
-    padding: 2rem;
-}
 
 
 /* Style komponentów i ich kontenerów
  * -----------------------------------------------------
  */
 
-.account-menu-link::before {
+/* header */
+.logo {
+    color: var(--color-blue);
+    font: 3.2vw 'Nanum Pen Script';
+}
+
+@media only screen and (max-width: 768px) {
+    .logo {
+        font-size: 2rem;
+    }
+}
+
+
+/* navigation */
+.header-and-nav {
+    background: var(--color-white);
+    border-right: 1px solid var(--color-light);
+}
+
+@media only screen and (max-width: 768px) {
+    .header-and-nav {
+        border-right: none;
+        border-bottom: 1px solid var(--color-light);
+    }
+}
+
+.hamburger-menu-icon {
+    display: none;
+}
+
+@media only screen and (max-width: 768px) {
+    .hamburger-menu-icon {
+        border: none;
+        background: none;
+        display: inline;
+    }
+
+    .hamburger-menu-icon::before {
+        font-family: "Font Awesome 5 Free";
+        font-weight: 900;
+        content: "\f0c9";
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .nav-menu {
+        background: var(--color-white);
+        border-right: 1px solid var(--color-light);
+        box-shadow: 0 0 15px 2px var(--color-light);
+        transform: translateX(-100vw);
+        transition: transform var(--transition-delay);
+    }
+}
+
+
+/* menu-links */
+.menu-link {
+    display: inline-block;
+    padding: 0.2rem 0;
+}
+
+.menu-link.account {
+    padding-top: 1.5rem;
+}
+
+.menu-link.account::before {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
     content: "\f2bd";
@@ -153,15 +206,11 @@ main {
     width: 1.4rem;
 }
 
-.account-menu-link:hover::before {
+.menu-link.account:hover::before {
     font-weight: 400;
 }
 
-.archive-link {
-    color: var(--color-medium);
-}
-
-.dashboard-menu-link::before {
+.menu-link.dashboard::before {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
     content: "\f249";
@@ -169,19 +218,11 @@ main {
     width: 1.4rem;
 }
 
-.dashboard-menu-link:hover::before {
+.menu-link.dashboard:hover::before {
     font-weight: 400;
 }
 
-.group-name {
-    color: var(--color-medium);
-}
-
-.group-name::after {
-    content: "→";
-}
-
-.subgroup-menu-link::before {
+.menu-link.subgroup::before {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
     content: "\f1ce";
@@ -189,20 +230,7 @@ main {
     width: 1.4rem;
 }
 
-.logo {
-    color: var(--color-blue);
-    font: 3.2vw 'Nanum Pen Script';
-}
-
-.left-aside {
-    border-right: 1px solid var(--color-light);
-}
-
-.main-title {
-    font-size: 1.25vw;
-}
-
-.menu-group-name {
+.menu-group {
     color: var(--color-medium);
     display: inline-block;
     font-weight: 500;
@@ -210,26 +238,49 @@ main {
     padding-top: 1.5rem;
 }
 
-.menu-link {
-    display: inline-block;
-    padding: 0.2rem 0;
-}
 
-.statement-date-and-source {
-    color: var(--color-medium);
-    margin: 0.4rem 0;
-}
-
+/* widget */
 .widget {
     border-radius: 5px;
     box-shadow: 0 0 15px 2px var(--color-light);
     padding: 1rem;
 }
 
-.widget-group-title {
+.widget-group {
     color: var(--color-medium);
 }
 
+
+/* statement */
+.main-title {
+    font-size: 1.25vw;
+}
+
+@media only screen and (max-width: 768px) {
+    .main-title {
+        font-size: 1rem;
+    }
+}
+
+.group {
+    color: var(--color-medium);
+}
+
+.group::after {
+    content: "→";
+}
+
+.date-and-source {
+    color: var(--color-medium);
+    margin: 0.4rem 0;
+}
+
+.archived {
+    color: var(--color-medium);
+}
+
+
+/* links */
 .record-in-links {
     padding: 0.3rem 0;
 }
@@ -259,19 +310,95 @@ main {
 body {
     display: grid;
     grid-template-areas: 
-        "aside main";
+        "header-and-nav main";
     grid-template-columns: 1fr 5fr;
-
 }
 
-aside {
+@media only screen and (max-width: 768px) {
+    body {
+        grid-template-areas: 
+            "header-and-nav"
+            "main";
+        grid-template-columns: 1fr;
+    }
+}
+
+.header-and-nav {
     display: grid;
-    grid-area: aside;
+    grid-area: header-and-nav;
     grid-template-areas: 
         "logo"
         "nav";
     grid-template-rows: min-content auto;
     height: 100vh;
+    position: sticky;
+    right: 0;
+    top: 0;
+}
+
+@media only screen and (max-width: 768px) {
+    .header-and-nav {
+        grid-template-areas: 
+            "nav logo";
+        grid-template-columns: min-content auto;
+        height: auto;
+    }
+}
+
+header {
+    padding: 2rem 2rem 0 2rem;
+}
+
+@media only screen and (max-width: 768px) {
+    header {
+        padding: 0;
+        align-self: center;
+    }
+}
+
+nav {
+    grid-area: nav;
+    padding: 2rem;
+}
+
+@media only screen and (max-width: 768px) {
+    nav {
+        padding: 1rem;
+    }
+}
+
+.logo {
+    grid-area: logo;
+}
+
+.gap {
+    flex-grow: 1;
+}
+
+.nav-menu {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+    .nav-menu {
+        height : 100vh;
+        overflow-y: auto;
+        padding: 2rem;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 80vw;
+        z-index: 1;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .hamburger-menu-icon:focus ~ .nav-menu,
+    .nav-menu:hover {
+        transform: translateX(0);
+    }
 }
 
 main {
@@ -283,20 +410,23 @@ main {
         "statements links";
     grid-template-columns: 3fr 1fr;
     grid-template-rows: min-content auto;
+    padding: 2rem;
 }
 
-.gap {
-    flex-grow: 1;
+@media only screen and (max-width: 768px) {
+    main {
+        grid-template-areas: 
+            "main-title"
+            "statements"
+            "links";
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, min-content);
+        padding: 1rem;
+    }
 }
 
 .main-title {
     grid-area: main-title;
-}
-
-.nav-menu {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
 }
 
 .statements {
