Add email verification in JavaScript

--- a/public/css/app-style.css
+++ b/public/css/app-style.css
@@ -583,6 +583,10 @@ form {
  * -----------------------------------------------------
  */
 
+.js-input-invalid  {
+    border-bottom-color: var(--color-error);
+}
+
 
 /* Style charakterystyczne dla przeglądarek
  * ----------------------------------------------------- 
