--- a/public/css/settings-style.css
+++ b/public/css/settings-style.css
@@ -41,7 +41,8 @@ main {
     grid-template-areas:
         "main-title main-title"
         "settings-for-account settings-for-account"
-        "settings-for-user-groups settings-for-user-identities";
+        "settings-for-user-groups settings-for-user-identities"
+        "settings-for-administrated-groups settings-for-user-identities";
     grid-template-columns: 2fr 2fr;
     grid-auto-rows: min-content;
     padding: 2rem;
@@ -53,6 +54,7 @@ main {
             "main-title"
             "settings-for-account"
             "settings-for-user-groups"
+            "settings-for-administrated-groups"
             "settings-for-user-identities";
         grid-template-columns: 1fr;
         grid-template-rows: repeat(3, min-content);
@@ -82,6 +84,13 @@ main {
     display: flex;
     flex-direction: column;
     grid-area: settings-for-user-identities;
+    row-gap: 1rem;
+}
+
+.settings-for-administrated-groups {
+    display: flex;
+    flex-direction: column;
+    grid-area: settings-for-administrated-groups;
     row-gap: 1rem;
 }
 
