--- a/public/css/dashboard-style.css
+++ b/public/css/dashboard-style.css
@@ -6,7 +6,7 @@
 .main-title {
     display: flex;
     flex-direction: row;
-    align-items: last baseline;
+    align-items: baseline;
 }
 
 .thread-name {
