Fix TODOs, add links in threads support

--- a/public/css/app-style.css
+++ b/public/css/app-style.css
@@ -440,7 +440,8 @@ nav {
  * -----------------------------------------------------
  */
 
-.js-input-invalid {
+.js-input-invalid,
+.js-input-invalid:focus {
     border-bottom-color: var(--color-error);
 }
 
