--- a/public/css/login-style.css
+++ b/public/css/login-style.css
@@ -252,6 +252,7 @@ form {
  * -----------------------------------------------------
  */
 
-.js-input-invalid {
+.js-input-invalid,
+.js-input-invalid:focus {
     border-bottom-color: var(--color-error);
 }
